<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/dimgray">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:text="@string/course_select_title"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="@color/white"
        >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/yuwen"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/yuwen"
            android:background="@drawable/button_shape"
            android:textColor="@color/white">
        </Button>
        <Button
            android:id="@+id/shuxue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/shuxue"
            android:background="@drawable/button_shape"
            android:textColor="@color/white">>
        </Button>
        <Button
            android:id="@+id/yingyu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/yingyu"
            android:background="@drawable/button_shape"
            android:textColor="@color/white">>
        </Button>
        <Button
            android:id="@+id/wuli"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/wuli"
            android:background="@drawable/button_shape"
            android:textColor="@color/white">>
        </Button>
        <Button
            android:id="@+id/huaxue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/huaxue"
            android:background="@drawable/button_shape"
            android:textColor="@color/white">>
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/shengwu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/shengwu"
            android:background="@drawable/button_shape"
            android:textColor="@color/white">>
        </Button>
        <Button
            android:id="@+id/zhengzhi"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/zhengzhi"
            android:background="@drawable/button_shape"
            android:textColor="@color/white">>
        </Button>
        <Button
            android:id="@+id/dili"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dili"
            android:background="@drawable/button_shape"
            android:textColor="@color/white">>
        </Button>
        <Button
            android:id="@+id/lishi"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/lishi"
            android:background="@drawable/button_shape"
            android:textColor="@color/white">>
        </Button>
        <Button
            android:id="@+id/xinxi"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/xinxi"
            android:background="@drawable/button_shape"
            android:textColor="@color/white">>
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/tiyu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tiyu"
            android:background="@drawable/button_shape"
            android:textColor="@color/white">>
        </Button>
        <Button
            android:id="@+id/kexue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/kexue"
            android:background="@drawable/button_shape"
            android:textColor="@color/white">>
        </Button>
        <Button
            android:id="@+id/ziran"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ziran"
            android:background="@drawable/button_shape"
            android:textColor="@color/white">>
        </Button>
        <Button
            android:id="@+id/meishu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/meishu"
            android:background="@drawable/button_shape"
            android:textColor="@color/white">>
        </Button>
        <Button
            android:id="@+id/shougong"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/shougong"
            android:background="@drawable/button_shape"
            android:textColor="@color/white">>
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/laodong"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/laodong"
            android:background="@drawable/button_shape"
            android:textColor="@color/white">>
        </Button>
        <Button
            android:id="@+id/weiji"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/weiji"
            android:background="@drawable/button_shape"
            android:textColor="@color/white">>
        </Button>
        <Button
            android:id="@+id/zixi"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/zixi"
            android:background="@drawable/button_shape"
            android:textColor="@color/white">>
        </Button>
        <Button
            android:id="@+id/kongbai"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/kongbai"
            android:background="@drawable/button_shape"
            android:textColor="@color/white">>
        </Button>
        <Button
            android:id="@+id/zidingyi"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/zidingyi"
            android:background="@drawable/button_shape"
            android:textColor="@color/white">>
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/dimgray"
        android:gravity="center"
        >
        <Button
            android:id="@+id/courseSubmit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/queding"></Button>
    </LinearLayout>



</LinearLayout>